--- a/eve.css
+++ b/eve.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap');
 *{
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     left: 0;
@@ -11,6 +12,62 @@ body{
     justify-content: center;
     align-items: center;
 }
+.count{
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.count h2{
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 10em;
+    line-height: 1em;
+}
+.countdown{
+    display: flex;
+    margin-top: 5px;
+}
+.countdown div{
+    position: relative;
+    width: 100px;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
+    margin: 0 25px;
+    font-size: 3em;
+    font-weight: 500;
+    background: white;
+    color: black;
+    margin-bottom: 200px;
+}
+.countdown div:before{
+    content:  '';
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    width: 100%;
+    height: 35px;
+    background: rgb(185, 185, 185);
+    font-size: 0.35em;
+    line-height: 35px;
+    font-weight: 300;
+}
+.countdown #day::before{
+    content: 'DAYS';
+}
+.countdown #hour::before{
+    content: 'HOURS';
+}
+.countdown #minut::before{
+    content: 'MINUTS';
+}
+.countdown #second::before{
+    content: 'SECOND';
+}
 .heading{
     display: flex;
     align-items: center;
@@ -18,7 +75,7 @@ body{
 .hh
 {
     color: white;
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
     align-items: center;
    display: inline-block;
    position: relative;
