--- a/eve.css
+++ b/eve.css
@@ -140,6 +140,7 @@ h1{
     border: 0px;
     border: solid 3px rgb(255, 255, 255);
     background: transparent;
+     margin-top: 50px;
     font-weight: 900;
     font-size: 1.2em;
     transition: linear;
@@ -147,7 +148,7 @@ h1{
 .con a button:hover{
     border: 0px;
     color: white;
-    background: rgb(0, 0, 0); 
+    background: rgba(0, 0, 0, 0.726); 
 }
 @media screen and (max-width: 1024px) {
     h1{
@@ -158,9 +159,11 @@ h1{
     }
 }
 .who{
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     align-items: center;
 }
 .who .we{
@@ -174,6 +177,7 @@ h1{
 .who .we h4{
     font-weight: 500;
     text-align: center;
+    
 }
 .about{
     color: white;
@@ -182,6 +186,7 @@ h1{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 .gallery{
     height: 500px;
