--- a/eve.css
+++ b/eve.css
@@ -200,3 +200,85 @@ h1{
     border-radius: 20px;
     box-shadow: white;
 }
+section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.gallery{
+ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    transform-style: preserve-3d;
+    width: 100%;
+  }
+  .card{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+  
+  }
+  section .card .box{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: solid white 3px;
+    transform-style: preserve-3d;
+    transition: 1s;
+  
+  }
+  
+  section .card:hover .box{
+    transform: rotateY(180deg);
+  }
+  section .card .box .imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+  } 
+  
+  section .card .box .contentbox{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0);
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
+    transform: rotateY(180deg);
+    border-radius: 20px;
+  }
+  
+  section .card .box .contentbox div{
+    transform-style: preserve-3d;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.774);
+    transform: translateZ(100px);
+    border-radius: 20px;
+  
+  }
+  section .card .box .contentbox div h2{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+  
+  }
+  section .card .box .contentbox div p{
+      font-weight: 700;
+  }
