--- a/event.css
+++ b/event.css
@@ -12,7 +12,15 @@ body{
     right: 0;
     width: 100%;
 }
-
+body::-webkit-scrollbar{
+    width: 5px;
+}
+body::-webkit-scrollbar-track{
+    background: #1e1e24;
+}
+body::-webkit-scrollbar-thumb{
+    background: #6649b8;
+}
 .main1{
     width: 100%;
     z-index: -1;
