--- a/eve.css
+++ b/eve.css
@@ -19,6 +19,15 @@ body{
     padding: 0;
     overflow-x: hidden;
 }
+body::-webkit-scrollbar{
+    width: 5px;
+}
+body::-webkit-scrollbar-track{
+    background: #1e1e24;
+}
+body::-webkit-scrollbar-thumb{
+    background: #6649b8;
+}
 .heading{
     align-items: center;
     text-align: center;
